# TinyTor

./: CMakeLists.txt  LICENSE  README.md
TinyTor/windows/crt/: crt.h  msvcrt.def
TinyTor/windows/include/crypto/: aes.h  base16.h  base32.h  base64.h
TinyTor/windows/include/crypto/base/: key.h
TinyTor/windows/include/crypto/capi/: base_encode.h
TinyTor/windows/include/logger/: colors.h  logger.h
TinyTor/windows/src/crypto/: aes.c  base16.c  base32.c  base64.c
TinyTor/windows/src/crypto/capi/: base_encode.c
src/: main.c
